Fix jython version.